Add MNIST transfer learning model

--- a/notebooks/Transfer-Learning.ipynb
+++ b/notebooks/Transfer-Learning.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "<module 'perturb' from '../src/perturb.py'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,20 +359,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -567,6 +553,245 @@
    ],
    "source": [
     "per.test_increasing_noise(nnet, Xtest, Ttest, var_range=(0.001, 0.1), trials_per_step=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transfer Learning on MNIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xtrain, Ttrain, Xtest, Ttest, _, _ = dm.load_mnist('./mnist.pkl.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise_Xtrain = dm.apply_manipulations(Xtrain, per_func=lambda x: per.add_image_noise(x, variance=0.05))\n",
+    "noise_Xtest = dm.apply_manipulations(Xtest, per_func=lambda x: per.add_image_noise(x, variance=0.05))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morenoise_Xtrain = dm.apply_manipulations(Xtrain, per_func=lambda x: per.add_image_noise(x, variance=0.1))\n",
+    "morenoise_Xtest = dm.apply_manipulations(Xtest, per_func=lambda x: per.add_image_noise(x, variance=0.1)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lessnoise_Xtrain = dm.apply_manipulations(Xtrain, per_func=lambda x: per.add_image_noise(x, variance=0.025))\n",
+    "lessnoise_Xtest = dm.apply_manipulations(Xtest, per_func=lambda x: per.add_image_noise(x, variance=0.025)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists('./pretrained_mnist_clean.pkl'):\n",
+    "    with open('./pretrained_mnist_clean.pkl', 'rb') as f:\n",
+    "        nnet = torch.load(f)\n",
+    "        nnet.cuda()\n",
+    "else:\n",
+    "    nnet = per.train_mnist(Xtrain, Ttrain, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NeuralNetwork_Convolutional(\n",
+       "                            n_channels_in_image=1,\n",
+       "                            image_size=28,\n",
+       "                            n_units_in_conv_layers=[10],\n",
+       "                            kernels_size_and_stride=[(7, 3)],\n",
+       "                            max_pooling_kernels_and_stride=[(2, 2)],\n",
+       "                            n_units_in_fc_hidden_layers=[],\n",
+       "                            classes=[0 1 2 3 4 5 6 7 8 9],\n",
+       "                            use_gpu=True)\n",
+       "Sequential(\n",
+       "  (conv_0): Conv2d(1, 10, kernel_size=(7, 7), stride=(3, 3))\n",
+       "  (norm_0): BatchNorm2d(10, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_0): ReLU()\n",
+       "  (pool_0): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (drop_0): Dropout(p=0.2, inplace=False)\n",
+       "  (flatten): Flatten()\n",
+       "  (output_1): Linear(in_features=160, out_features=10, bias=True)\n",
+       ")\n",
+       "   Network was trained for 50 epochs with a batch size of 1500 and took 6.1463 seconds.\n",
+       "   Final objective value is 0.170"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists('./pretrained_mnist_clean.pkl'):\n",
+    "    with open('./pretrained_mnist_clean.pkl', 'wb') as f:\n",
+    "            torch.save(nnet, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(97.42, 28.060000000000002, 18.09, 13.59)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest, 100))\n",
+    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest, 100))\n",
+    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest, 100))\n",
+    "morenoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, morenoise_Xtest, 100))\n",
+    "(clean_pct, lessnoise_pct, noise_pct, morenoise_pct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Conv2d(1, 10, kernel_size=(7, 7), stride=(3, 3))\n",
+       "  (1): BatchNorm2d(10, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (2): ReLU()\n",
+       "  (3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (4): Dropout(p=0.2, inplace=False)\n",
+       "  (5): Flatten()\n",
+       "  (6): Linear(in_features=160, out_features=256, bias=True)\n",
+       "  (7): ReLU()\n",
+       "  (8): Linear(in_features=256, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nnet.transfer_learn_setup([256])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10 error 0.27851\n",
+      "Epoch 20 error 0.21414\n",
+      "Epoch 30 error 0.19123\n",
+      "Epoch 40 error 0.17543\n",
+      "Epoch 50 error 0.16194\n",
+      "Epoch 60 error 0.15406\n",
+      "Epoch 70 error 0.14188\n",
+      "Epoch 80 error 0.13683\n",
+      "Epoch 90 error 0.13119\n",
+      "Epoch 100 error 0.12542\n"
+     ]
+    }
+   ],
+   "source": [
+    "nnet.train(noise_Xtrain, Ttrain, n_epochs=100, batch_size=1000,\n",
+    "           optim='Adam', learning_rate=0.0005, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(95.95, 96.22, 95.67, 86.03)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest, 100))\n",
+    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest, 100))\n",
+    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest, 100))\n",
+    "morenoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, morenoise_Xtest, 100))\n",
+    "(clean_pct, lessnoise_pct, noise_pct, morenoise_pct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(96.28999999999999, 96.06, 95.41, 88.21)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest, 100))\n",
+    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest, 100))\n",
+    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest, 100))\n",
+    "morenoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, morenoise_Xtest, 100))\n",
+    "(clean_pct, lessnoise_pct, noise_pct, morenoise_pct)"
    ]
   }
  ],
