Experiment with not freezing pretrained weights

--- a/notebooks/Transfer-Learning.ipynb
+++ b/notebooks/Transfer-Learning.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "<module 'perturb' from '../src/perturb.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "   Final objective value is 0.155"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(86.92, 83.49, 67.15, 28.549999999999997)"
+       "(86.92, 83.65, 66.57, 28.79)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,27 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2048"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nnet.nnet[-1].in_features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -289,41 +269,60 @@
        ")"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transfer_network = nnet.transfer_learn_setup([256, 512], overwrite_network=True)\n",
+    "transfer_network = nnet.transfer_learn_setup([256, 512], overwrite_network=True, freeze=False)\n",
     "transfer_network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 error 0.24904\n",
-      "Epoch 2 error 0.20320\n",
-      "Epoch 3 error 0.17259\n",
-      "Epoch 4 error 0.15073\n",
-      "Epoch 5 error 0.12937\n",
-      "Epoch 6 error 0.11290\n",
-      "Epoch 7 error 0.11996\n",
-      "Epoch 8 error 0.10172\n",
-      "Epoch 9 error 0.09724\n",
-      "Epoch 10 error 0.14525\n"
+      "Epoch 1 error 0.12701\n",
+      "Epoch 2 error 0.05766\n",
+      "Epoch 3 error 0.06599\n",
+      "Epoch 4 error 0.06534\n",
+      "Epoch 5 error 0.03360\n"
      ]
     }
    ],
    "source": [
-    "nnet.train(noise_Xtrain, Ttrain, n_epochs=10, batch_size=200,\n",
+    "nnet.train(noise_Xtrain, Ttrain, n_epochs=5, batch_size=200,\n",
     "           optim='Adam', learning_rate=0.0005, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(82.62, 83.56, 83.73, 69.28999999999999)"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, Xtest, 100))\n",
+    "noise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, noise_Xtest, 100))\n",
+    "lessnoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, lessnoise_Xtest, 100))\n",
+    "morenoise_pct = ml.percent_correct(Ttest, ml.batched_use(nnet, morenoise_Xtest, 100))\n",
+    "(clean_pct, lessnoise_pct, noise_pct, morenoise_pct)"
    ]
   },
   {
@@ -603,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +644,7 @@
        "   Final objective value is 0.170"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +675,7 @@
        "(97.42, 28.060000000000002, 18.09, 13.59)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -710,54 +709,54 @@
        ")"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nnet.transfer_learn_setup([256])"
+    "nnet.transfer_learn_setup([256], freeze=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10 error 0.27851\n",
-      "Epoch 20 error 0.21414\n",
-      "Epoch 30 error 0.19123\n",
-      "Epoch 40 error 0.17543\n",
-      "Epoch 50 error 0.16194\n",
-      "Epoch 60 error 0.15406\n",
-      "Epoch 70 error 0.14188\n",
-      "Epoch 80 error 0.13683\n",
-      "Epoch 90 error 0.13119\n",
-      "Epoch 100 error 0.12542\n"
+      "Epoch 2 error 0.21997\n",
+      "Epoch 4 error 0.18007\n",
+      "Epoch 6 error 0.16218\n",
+      "Epoch 8 error 0.14380\n",
+      "Epoch 10 error 0.13490\n",
+      "Epoch 12 error 0.12675\n",
+      "Epoch 14 error 0.12679\n",
+      "Epoch 16 error 0.12592\n",
+      "Epoch 18 error 0.12104\n",
+      "Epoch 20 error 0.11978\n"
      ]
     }
    ],
    "source": [
-    "nnet.train(noise_Xtrain, Ttrain, n_epochs=100, batch_size=1000,\n",
+    "nnet.train(noise_Xtrain, Ttrain, n_epochs=20, batch_size=200,\n",
     "           optim='Adam', learning_rate=0.0005, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(95.95, 96.22, 95.67, 86.03)"
+       "(95.67, 96.55, 96.17, 89.05999999999999)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,16 +771,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(96.28999999999999, 96.06, 95.41, 88.21)"
+       "(95.67, 96.55, 96.17, 89.05999999999999)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
