--- a/notebooks/stock-analysis.ipynb
+++ b/notebooks/stock-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "import sys\n",
     "sys.path.append('../src')\n",
     "\n",
-    "import neuralnetworkclassifierTEST as nncTEST\n",
+    "import neuralnetworkclassifier as nnc\n",
     "import dataset_manipulations as dm\n",
     "import mlutils as ml\n",
     "import perturb as per\n",
@@ -33,16 +33,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import imp\n",
-    "imp.reload(nncTEST);"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -53,28 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2 error 1.01538\n",
-      "Epoch 4 error 0.61498\n",
-      "Epoch 6 error 0.60246\n",
-      "Epoch 8 error 0.32425\n",
-      "Epoch 10 error 0.32585\n",
-      "Epoch 12 error 0.20780\n",
-      "Epoch 14 error 0.29149\n",
-      "Epoch 16 error 0.10980\n",
-      "Epoch 18 error 0.15860\n",
-      "Epoch 20 error 0.13964\n"
+      "\n",
+      "GPU is not available. Running on CPU.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "nnet = nncTEST.NeuralNetwork_Convolutional(n_channels_in_image=Xtrain.shape[1],\n",
+    "nnet = nnc.NeuralNetwork_Convolutional(n_channels_in_image=Xtrain.shape[1],\n",
     "                           image_size=Xtrain.shape[2],\n",
     "                           n_units_in_conv_layers=[64, 64, 128, 128, 256, 256, 512, 512],\n",
     "                           kernels_size_and_stride=[(3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1)],\n",
@@ -82,8 +65,72 @@
     "                           n_units_in_fc_hidden_layers=[],\n",
     "                           classes=np.unique(Ttrain), use_gpu=True, random_seed=12)\n",
     "\n",
-    "nnet.train(Xtrain, Ttrain, n_epochs=20, batch_size=100,\n",
-    "           optim='Adam', learning_rate=0.0005, verbose=True)"
+    "# nnet.train(Xtrain, Ttrain, n_epochs=20, batch_size=100,\n",
+    "#            optim='Adam', learning_rate=0.0005, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NeuralNetwork_Convolutional(\n",
+       "                            n_channels_in_image=3,\n",
+       "                            image_size=32,\n",
+       "                            n_units_in_conv_layers=[64, 64, 128, 128, 256, 256, 512, 512],\n",
+       "                            kernels_size_and_stride=[(3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1), (3, 1, 1)],\n",
+       "                            max_pooling_kernels_and_stride=[(), (2, 2), (), (2, 2), (), (2, 2), (), (2, 2)],\n",
+       "                            n_units_in_fc_hidden_layers=[],\n",
+       "                            classes=[0 1 2 3 4 5 6 7 8 9],\n",
+       "                            use_gpu=False)\n",
+       "Sequential(\n",
+       "  (conv_0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_0): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_0): ReLU()\n",
+       "  (conv_1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_1): ReLU()\n",
+       "  (pool_1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (drop_1): Dropout(p=0.2, inplace=False)\n",
+       "  (conv_2): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_2): ReLU()\n",
+       "  (conv_3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_3): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_3): ReLU()\n",
+       "  (pool_3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (drop_3): Dropout(p=0.2, inplace=False)\n",
+       "  (conv_4): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_4): ReLU()\n",
+       "  (conv_5): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_5): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_5): ReLU()\n",
+       "  (pool_5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (drop_5): Dropout(p=0.2, inplace=False)\n",
+       "  (conv_6): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_6): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_6): ReLU()\n",
+       "  (conv_7): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (norm_7): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (output_7): ReLU()\n",
+       "  (pool_7): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (drop_7): Dropout(p=0.2, inplace=False)\n",
+       "  (flatten): Flatten()\n",
+       "  (output_8): Linear(in_features=2048, out_features=10, bias=True)\n",
+       ")  Network is not trained."
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nnet"
    ]
   },
   {
