Add more writing on transfer and noise

--- a/notebooks/Transfer-Learning.ipynb
+++ b/notebooks/Transfer-Learning.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "# Transfer Learning\n",
     "\n",
-    "This notebook explores different efforts for transfer learning applied to MNIST and CIFAR with augmented images."
+    "This notebook explores different efforts for transfer learning applied to MNIST and CIFAR with augmented images.\n",
+    "\n",
+    "## On Transfer Learning\n",
+    "\n",
+    "The goal of transfer learning is traditionally to exploit the knowledge of one task, encoded in a previously trained network, for another task. The pretrained network's knowledge is utilized as a \"feature extractor,\" extracting general information from the data before additional (new) layers are trained on the new task data. In short, a network created for transfer learning may contain part or all of a pretrained network followed by a new network that is trained on new task data.\n",
+    "\n",
+    "There are two approaches for how to handle the pretrained model's existing weights when adapting to the new task through additional training. One option is to freeze all parameters of the existing network, and only allow back propagation to affect the parameters of the subsequent layers of the new task. The other option is to allow back propagation through both parts of the network, fine-tuning the parameters of the pretrained model."
    ]
   },
   {
