Add photo encyclopedia reference

--- a/TeX/references.bib
+++ b/TeX/references.bib
@@ -133,3 +133,16 @@
   url = {http://cvrr.ucsd.edu/LISA/lisa-traffic-sign-dataset.html},
   title = {Laboratory for Intelligent and Safe Automobiles}
 }
+
+@book{photoencyc,
+  address = "Boston",
+  booktitle = "The Focal encyclopedia of photography",
+  edition = "3rd ed.",
+  isbn = "0240800591",
+  keywords = "Photography",
+  language = "eng",
+  lccn = "92044267",
+  publisher = "Focal Press",
+  title = "The Focal encyclopedia of photography ",
+  year = "c1993",
+}
