--- a/TeX/references.bib
+++ b/TeX/references.bib
@@ -1,4 +1,4 @@
-@article{DBLP:journals/corr/abs-1710-08864,
+@article{onepixelfoolingdnn,
   author    = {Jiawei Su and Danilo Vasconcellos Vargas and Kouichi Sakurai},
   title     = {One pixel attack for fooling deep neural networks},
   journal   = {CoRR},
@@ -12,7 +12,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/NarodytskaK16,
+@article{simpleblackboxpert,
   author    = {Nina Narodytska and Shiva Prasad Kasiviswanathan},
   title     = {Simple Black-Box Adversarial Perturbations for Deep Networks},
   journal   = {CoRR},
@@ -26,7 +26,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/Moosavi-Dezfooli16,
+@article{universaladvpert,
   author    = {Seyed{-}Mohsen Moosavi{-}Dezfooli and Alhussein Fawzi and Omar Fawzi and Pascal Frossard},
   title     = {Universal adversarial perturbations},
   journal   = {CoRR},
@@ -63,7 +63,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/KurakinGB16,
+@article{adversarialexamplesworld,
   author    = {Alexey Kurakin and Ian J. Goodfellow and Samy Bengio},
   title     = {Adversarial examples in the physical world},
   journal   = {CoRR},
@@ -77,7 +77,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/EvtimovEFKLPRS17,
+@article{robustphysical,
   author    = {Ivan Evtimov and Kevin Eykholt and Earlence Fernandes and Tadayoshi Kohno and Bo Li and Atul Prakash and Amir Rahmati and Dawn Song},
   title     = {Robust Physical-World Attacks on Machine Learning Models},
   journal   = {CoRR},
@@ -91,7 +91,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/abs-1712-09665,
+@article{adversarial-patch,
   author    = {Tom B. Brown and Dandelion Man{\'{e}} and Aurko Roy and Mart{\'{\i}}n Abadi and Justin Gilmer},
   title     = {Adversarial Patch},
   journal   = {CoRR},
@@ -105,18 +105,19 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/abs-1801-00349,
-  author    = {Mahmood Sharif and Sruti Bhagavatula and Lujo Bauer and Michael K. Reiter},
-  title     = {Adversarial Generative Nets: Neural Network Attacks on State-of-the-Art Face Recognition},
-  journal   = {CoRR},
-  volume    = {abs/1801.00349},
-  year      = {2018},
-  url       = {http://arxiv.org/abs/1801.00349},
-  archivePrefix = {arXiv},
-  eprint    = {1801.00349},
-  timestamp = {Mon, 13 Aug 2018 16:48:04 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1801-00349},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{Sharif_2019,
+   title={A General Framework for Adversarial Examples with Objectives},
+   volume={22},
+   ISSN={2471-2566},
+   url={http://dx.doi.org/10.1145/3317611},
+   DOI={10.1145/3317611},
+   number={3},
+   journal={ACM Transactions on Privacy and Security},
+   publisher={Association for Computing Machinery (ACM)},
+   author={Sharif, Mahmood and Bhagavatula, Sruti and Bauer, Lujo and Reiter, Michael K.},
+   year={2019},
+   month={Jun},
+   pages={1–30}
 }
 
 @misc{CIFAR10,
@@ -146,4 +147,12 @@
   title = "The Focal encyclopedia of photography ",
   year = "c1993",
   pages = 507
+}
+
+@unpublished{gaussian_filtering,
+  author = {Patrice Jean Delmas},
+  title = {Gaussian Filtering},
+  year = {2016},
+  url = {https://www.cs.auckland.ac.nz/courses/compsci373s1c/PatricesLectures/Gaussian%20Filtering_1up.pdf},
+  publisher = {The University of Auckland}
 }
