updated plots to save data

--- a/notebooks/cifar10.ipynb
+++ b/notebooks/cifar10.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,15 +47,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "x cifar-10-batches-py/\n",
-      "x cifar-10-batches-py/data_batch_4\n",
-      "x cifar-10-batches-py/readme.html\n",
-      "x cifar-10-batches-py/test_batch\n",
-      "x cifar-10-batches-py/data_batch_3\n",
-      "x cifar-10-batches-py/batches.meta\n",
-      "x cifar-10-batches-py/data_batch_2\n",
-      "x cifar-10-batches-py/data_batch_5\n",
-      "x cifar-10-batches-py/data_batch_1\n"
+      "cifar-10-batches-py/\n",
+      "cifar-10-batches-py/data_batch_4\n",
+      "cifar-10-batches-py/readme.html\n",
+      "cifar-10-batches-py/test_batch\n",
+      "cifar-10-batches-py/data_batch_3\n",
+      "cifar-10-batches-py/batches.meta\n",
+      "cifar-10-batches-py/data_batch_2\n",
+      "cifar-10-batches-py/data_batch_5\n",
+      "cifar-10-batches-py/data_batch_1\n"
      ]
     }
    ],
