--- a/TeX/main.tex
+++ b/TeX/main.tex
@@ -3,7 +3,7 @@
 \usepackage{mathtools}
 \usepackage{caption}
 \usepackage{subcaption}
-\captionsetup[figure]{font=small}
+\captionsetup{font=small}
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{cleveref}
@@ -150,7 +150,7 @@ Moreover, we reduce training variance and computational complexity by utilizing 
 \begin{figure}[!b]
 	\centering
 	\includesvg[inkscapelatex=false, width=0.70\linewidth]{diagrams/mnist-diagram.svg}
-	\captionsetup{width=0.90\linewidth}
+	\captionsetup{width=1\linewidth}
 	\caption{Neural network structure trained for MNIST to achieve 97.420\% test accuracy. The model is trained with $\rho = 0.05$, over 50 epochs and a batch size of 1,500.}
 	\label{fig:mnist_network_structure}
 \end{figure}
@@ -158,7 +158,7 @@ Moreover, we reduce training variance and computational complexity by utilizing 
 \begin{figure*}[!t]
 	\centering
 	\includesvg[inkscapelatex=false, width=\textwidth]{diagrams/cifar-diagram.svg}
-    \captionsetup{width=0.90\linewidth}
+    \captionsetup{width=1\linewidth}
 	\caption{Neural network structure trained for CIFAR-10 to achieve 86.920\% test accuracy. The model is trained with $\rho = 0.0005$, over 20 epochs and a batch size of 100.}
 	\label{fig:cifar_network_structure}
 \end{figure*}
@@ -203,7 +203,7 @@ Each dataset has a unique network structure in reference to the number of traini
    \bottomrule
   \end{tabular}
   }
-  \captionsetup{width=0.90\linewidth}
+  \captionsetup{width=1\linewidth}
   \caption{Comparison of accuracy on CIFAR-10 with differences of network structure components. All trials utilize the same hyperparameters.}
   \label{tab:network_attributes}
 \end{table}
@@ -213,32 +213,32 @@ Each dataset has a unique network structure in reference to the number of traini
 
 \begin{figure*}[!t]
     \centering
-    \begin{subfigure}{0.305\linewidth}
+    \begin{subfigure}{0.307\linewidth}
         \centering
         \includegraphics[width=1\columnwidth]{impact/cifar_example_grid_1px_stuck.pdf}
         \caption{}
         \label{fig:impact_visual_blur}
     \end{subfigure}
     \hspace{0.7em}
-    \begin{subfigure}{0.33\linewidth}
+    \begin{subfigure}{0.335\linewidth}
         \centering
         \includegraphics[width=1\columnwidth]{impact/cifar_example_grid_1var_noise.pdf}
         \caption{}
         \label{fig:impact_visual_noise}
     \end{subfigure}
     \hspace{0.7em}
-    \begin{subfigure}{0.305\linewidth}
+    \begin{subfigure}{0.307\linewidth}
         \centering
         \includegraphics[width=1\columnwidth]{impact/cifar_example_grid_blur.pdf}
         \caption{}
         \label{fig:impact_visual_pixel}
     \end{subfigure}
-    \captionsetup{width=0.90\linewidth}
+    \captionsetup{width=1\linewidth}
     \caption{$X_i$ represents the output of the trained model on the natural image, after applying the perturbation, the resulting $M_i$ prediction is shown. (a) displays the result of a single random stuck pixels, (b) shows a noise variance of 0.05, and (c) has added blur with a standard deviation for Gaussian kernel of 0.75.}
     \label{fig:impact_visual_all}
 \end{figure*}
 
-The impact that augmented data has on a model can be quantified as computing the percent correctly predicted with that data on a model trained on natural images. A percentage lower than that of the test accuracy of natural images signifies a degradation in performance. The test accuracy for MNIST and CIFAR yield 97.420\% and 86.920\% respectfully. Zagoruyko and Komodakis demonstrate an accuracy of 96.11\% is achievable on CIFAR-10 with Wide Residual Networks \cite{Zagoruyko2016wideresnet}. The difference in accuracy strongly correlates to the complexity of the input space and the models used. The focus of our work is to replicate and subsequently mitigate performance degradation caused by perturbed images.
+The impact that augmented data has on a model can be quantified as computing the percent correctly predicted with that data on a model trained on natural images. A percentage lower than that of the test accuracy of natural images signifies a degradation in performance. The test accuracy for MNIST and CIFAR yield 97.420\% and 86.920\%, respectively. Zagoruyko and Komodakis demonstrate an accuracy of 96.11\% is achievable on CIFAR-10 with Wide Residual Networks \cite{Zagoruyko2016wideresnet}. The difference in accuracy strongly correlates to the complexity of the input space and the models used. The focus of our work is to replicate and subsequently mitigate performance degradation caused by perturbed images.
 
 Initial models trained on natural images have data ran with three main perturbations applied, including: modified pixels, image noise, and image blur. Each of these techniques have variations in the intensity of the corresponding modification. Results are captured and displayed for both MNIST and CIFAR datasets. We find the minimal tolerance for each technique, and scale the results to a meaningful yet reasonable limit. We discusse this topic in more depth below. \autoref{fig:impact_visual_all} shows a visual of the three perturbations types with the model's prediction on the natural and modified images. These results are studied in more detail via experiments to understand how variations of each impact accuracy.
 
@@ -254,20 +254,20 @@ In theory, a camera may take on any number of pixel modifications, but their acc
 
 \begin{figure}[H]
     \centering
-    \begin{subfigure}{0.45\columnwidth}
+    \begin{subfigure}{0.49\columnwidth}
         \centering
-        \includegraphics[width=1\columnwidth]{impact/mnist_change_5px.pdf}
+        \includegraphics[width=1\columnwidth]{impact/mnist/5px.pdf}
         \caption{MNIST}
         \label{fig:impact_pixel_change_mnist}
     \end{subfigure}
-    \begin{subfigure}{0.45\columnwidth}
+    \begin{subfigure}{0.49\columnwidth}
         \centering
-        \includegraphics[width=1\columnwidth]{impact/cifar_change_5px_stuck.pdf}
+        \includegraphics[width=1\columnwidth]{impact/cifar/5px.pdf}
         \caption{CIFAR-10}
         \label{fig:impact_pixel_change_cifar}
     \end{subfigure}
-    \captionsetup{width=0.90\columnwidth}
-    \caption{(a) and (b) show the result of pixel perturbations of data on models trained on natural images.}
+    \captionsetup{width=1\columnwidth}
+    \caption{(a) and (b) show the result of pixel perturbations of data on models trained on natural images. Test accuracy is shown as a function of the number of changed pixels.}
     \label{fig:impact_pixel_change}
 \end{figure}
 
@@ -281,8 +281,8 @@ To simulate noise in images, we implemented a function to additively apply sampl
 
 \begin{figure}[!b]
     \centering
-    \includegraphics[trim={0 0.85cm 0 0.5cm},clip,width=1\columnwidth]{impact/increasing_noise_example.pdf}
-    \captionsetup{width=0.90\columnwidth}
+    \includegraphics[trim={0 0.85cm 0 0.7cm},clip,width=1\columnwidth]{impact/increasing_noise_example.pdf}
+    \captionsetup{width=1\columnwidth}
     \caption{An image from CIFAR augmented with simulated noise sampled with different levels of variance, ranging from 0.001 to 0.1.}
     \label{fig:increasing_noise}
 \end{figure}
@@ -295,18 +295,18 @@ When data augmented with simulated noise at different levels of variance was use
 
 \begin{figure}[H]
     \centering
-    \begin{subfigure}{0.45\columnwidth}
+    \begin{subfigure}{0.49\columnwidth}
         \centering
-        \includegraphics[width=1\columnwidth]{impact/mnist_change_var_noise.pdf}
+        \includegraphics[width=1\columnwidth]{impact/mnist/noise.pdf}
         \caption{MNIST}
     \end{subfigure}
-    \begin{subfigure}{0.45\columnwidth}
+    \begin{subfigure}{0.49\columnwidth}
         \centering
-        \includegraphics[width=1\columnwidth]{impact/cifar_change_var_noise.pdf}
+        \includegraphics[width=1\columnwidth]{impact/cifar/noise.pdf}
         \caption{CIFAR-10}
     \end{subfigure}
-    \captionsetup{width=0.90\columnwidth}
-    \caption{(a) and (b) show the result of augmenting images with noise by change in variance, and testing on models trained on natural images.}
+    \captionsetup{width=1\columnwidth}
+    \caption{(a) and (b) show the result of augmenting images with noise by change in variance, and testing on models trained on natural images. Test accuracy is shown as a function of the variance in noise.}
     \label{fig:impact_noise_change}
 \end{figure}
 
@@ -316,8 +316,8 @@ An image may naturally have blur included for two primary reasons, (a) the image
 
 \begin{figure}[!t]
     \centering
-    \includegraphics[trim={0 0.85cm 0 0.5cm},clip,width=1\columnwidth]{impact/increasing_blur_example.pdf}
-    \captionsetup{width=0.90\columnwidth}
+    \includegraphics[trim={0 0.85cm 0 0.7cm},clip,width=1\columnwidth]{impact/increasing_blur_example.pdf}
+    \captionsetup{width=1\columnwidth}
     \caption{An image from CIFAR augmented with simulated blur sampled with different levels of variance, ranging from 0.04 to 1.00.}
     \label{fig:increasing_blur}
 \end{figure}
@@ -330,18 +330,18 @@ In our experiments we vary the value of $\sigma$ between the range of 0.40 and 1
 
 \begin{figure}[H]
     \centering
-    \begin{subfigure}{0.45\columnwidth}
+    \begin{subfigure}{0.49\columnwidth}
         \centering
-        \includegraphics[width=1\columnwidth]{impact/mnist_change_var_blur.pdf}
+        \includegraphics[width=1\columnwidth]{impact/mnist/blur.pdf}
         \caption{MNIST}
     \end{subfigure}
-    \begin{subfigure}{0.45\columnwidth}
+    \begin{subfigure}{0.49\columnwidth}
         \centering
-        \includegraphics[width=1\columnwidth]{impact/cifar_change_var_blur.pdf}
+        \includegraphics[width=1\columnwidth]{impact/cifar/blur.pdf}
         \caption{CIFAR-10}
     \end{subfigure}
-    \captionsetup{width=0.90\columnwidth}
-    \caption{(a) and (b) show the result of augmenting images with blur by change in variance, and testing on models trained on natural images.}
+    \captionsetup{width=1\columnwidth}
+    \caption{(a) and (b) show the result of augmenting images with blur by change in variance, and testing on models trained on natural images. Test accuracy is shown as a function of the variance in blur.}
     \label{fig:impact_blur_change}
 \end{figure}
 
@@ -385,7 +385,7 @@ From the perspective of this work, the “new task” for transfer learning is s
 \begin{figure}[H]
 	\centering
 	\includesvg[inkscapelatex=false, width=1\linewidth]{diagrams/cifar-transfer.svg}
-	\captionsetup{width=0.90\linewidth}
+	\captionsetup{width=1\linewidth}
 	\caption{Modified CIFAR model used for transfer learning, where the final output layer is replaced by two additional fully connected layers leading up to the final output layer.}
 	\label{fig:transfer_learn}
 \end{figure}
@@ -441,7 +441,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{constant/mnist-pixel-stuck.pdf}
+        \includegraphics[width=\textwidth]{training/constant/mnist-pixel-stuck.pdf}
         \caption{Stuck} 
         \label{fig:constant-mnist-stuck}
     \end{subfigure}
@@ -449,7 +449,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{constant/cifar-pixel-stuck.pdf}
+        \includegraphics[width=\textwidth]{training/constant/cifar-pixel-stuck.pdf}
         \caption{Stuck} 
         \label{fig:constant-pixel-cifar-stuck}
     \end{subfigure}
@@ -458,14 +458,14 @@ Our analysis explores various training techniques to improve the accuracy over a
 
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{constant/mnist-pixel-hot.pdf}
+        \includegraphics[width=\textwidth]{training/constant/mnist-pixel-hot.pdf}
         \caption{Hot} 
         \label{fig:constant-mnist-hot}
     \end{subfigure}
     \quad
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{constant/cifar-pixel-hot.pdf}
+        \includegraphics[width=\textwidth]{training/constant/cifar-pixel-hot.pdf}
         \caption{Hot} 
         \label{fig:constant-cifar-hot}
     \end{subfigure}
@@ -474,19 +474,19 @@ Our analysis explores various training techniques to improve the accuracy over a
     
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{constant/mnist-pixel-dead.pdf}
+        \includegraphics[width=\textwidth]{training/constant/mnist-pixel-dead.pdf}
         \caption{Dead} 
         \label{fig:constant-mnist-dead}
     \end{subfigure}
     \quad
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{constant/cifar-pixel-dead.pdf}
+        \includegraphics[width=\textwidth]{training/constant/cifar-pixel-dead.pdf}
         \caption{Dead} 
         \label{fig:constant-cifar-dead}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Constant learning models trained on pixel variations for each pixel category. Results show tests on 2 px changes sampled 25 times for the MNIST and CIFAR-10 datasets.} 
+    \caption{Constant learning models trained on pixel variations for each pixel category. Results show tests on 2 px changes sampled 25 times for the MNIST and CIFAR-10 datasets. Test accuracy is shown as a function of the change in training pixels.} 
     \label{fig:constant-pixel}
 \end{figure}
     
@@ -495,7 +495,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{constant/mnist-noise-noise.pdf}
+        \includegraphics[width=\textwidth]{training/constant/mnist-noise-noise.pdf}
         \caption{} 
         \label{fig:constant-mnist-noise}
     \end{subfigure}
@@ -503,12 +503,12 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{constant/cifar-noise-noise.pdf}
+        \includegraphics[width=\textwidth]{training/constant/cifar-noise-noise.pdf}
         \caption{} 
         \label{fig:constant-cifar-noise}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Constant learning models trained on variations of noise sampled from a normal distribution. Results show tests on various noise levels for the MNIST and CIFAR-10 datasets.} 
+    \caption{Constant learning models trained on variations of noise sampled from a normal distribution. Results show tests on various noise levels for the MNIST and CIFAR-10 datasets. Test accuracy is shown as a function of the variance in noise.} 
     \label{fig:constant-noise}
 \end{figure}
 
@@ -517,7 +517,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{constant/mnist-blur-blur.pdf}
+        \includegraphics[width=\textwidth]{training/constant/mnist-blur-blur.pdf}
         \caption{} 
         \label{fig:constant-mnist-blur}
     \end{subfigure}
@@ -525,12 +525,12 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{constant/cifar-blur-blur.pdf}
+        \includegraphics[width=\textwidth]{training/constant/cifar-blur-blur.pdf}
         \caption{} 
         \label{fig:constant-cifar-blur}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Impact of blurry input images applied to MNIST and CIFAR-10 models trained with constant learning.} 
+    \caption{Impact of blurry input images applied to MNIST and CIFAR-10 models trained with constant learning. Test accuracy is shown as a function of the variance in blur.} 
     \label{fig:constant-blur}
 \end{figure}
 
@@ -541,7 +541,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{incremental/mnist-pixel-stuck.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/mnist-pixel-stuck.pdf}
         \caption{Stuck} 
         \label{fig:incremental-mnist-stuck}
     \end{subfigure}
@@ -549,7 +549,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{incremental/cifar-pixel-stuck.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/cifar-pixel-stuck.pdf}
         \caption{Stuck} 
         \label{fig:incremental-cifar-stuck}
     \end{subfigure}
@@ -558,14 +558,14 @@ Our analysis explores various training techniques to improve the accuracy over a
 
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{incremental/mnist-pixel-hot.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/mnist-pixel-hot.pdf}
         \caption{Hot} 
         \label{fig:incremental-mnist-hot}
     \end{subfigure}
     \quad
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{incremental/cifar-pixel-hot.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/cifar-pixel-hot.pdf}
         \caption{Hot} 
         \label{fig:incremental-cifar-hot}
     \end{subfigure}
@@ -574,19 +574,19 @@ Our analysis explores various training techniques to improve the accuracy over a
     
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{incremental/mnist-pixel-dead.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/mnist-pixel-dead.pdf}
         \caption{Dead} 
         \label{fig:incremental-mnist-dead}
     \end{subfigure}
     \quad
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{incremental/cifar-pixel-dead.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/cifar-pixel-dead.pdf}
         \caption{Dead} 
         \label{fig:incremental-cifar-dead}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Incremental learning models trained on pixel variations for each pixel category. Results show tests on 2 px changes sampled 25 times for the MNIST and CIFAR-10 datasets.} 
+    \caption{Incremental learning models trained on pixel variations for each pixel category. Results show tests on 2 px changes sampled 25 times for the MNIST and CIFAR-10 datasets. Test accuracy is shown as a function of the change in training pixels.} 
     \label{fig:incremental-pixel}
 \end{figure}
 
@@ -595,7 +595,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{incremental/mnist-noise-noise.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/mnist-noise-noise.pdf}
         \caption{} 
         \label{fig:incremental-mnist-noise}
     \end{subfigure}
@@ -603,12 +603,12 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{incremental/cifar-noise-noise.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/cifar-noise-noise.pdf}
         \caption{} 
         \label{fig:incremental-cifar-noise}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Incremental learning models trained on variations of noise sampled from a normal distribution. Results show tests on various noise levels for the MNIST and CIFAR-10 datasets.} 
+    \caption{Incremental learning models trained on variations of noise sampled from a normal distribution. Results show tests on various noise levels for the MNIST and CIFAR-10 datasets. Test accuracy is shown as a function of the variance in noise.} 
     \label{fig:incremental-noise}
 \end{figure}
 
@@ -617,7 +617,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{incremental/mnist-blur-blur.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/mnist-blur-blur.pdf}
         \caption{} 
         \label{fig:incremental-mnist-blur}
     \end{subfigure}
@@ -625,12 +625,12 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{incremental/cifar-blur-blur.pdf}
+        \includegraphics[width=\textwidth]{training/incremental/cifar-blur-blur.pdf}
         \caption{} 
         \label{fig:incremental-cifar-blur}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Impact of blurry input images applied to MNIST and CIFAR-10 models trained with incremental learning.} 
+    \caption{Impact of blurry input images applied to MNIST and CIFAR-10 models trained with incremental learning. Test accuracy is shown as a function of the variance in blur.} 
     \label{fig:incremental-blur}
 \end{figure}
 
@@ -643,7 +643,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{transfer/mnist-pixel-stuck.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/mnist-pixel-stuck.pdf}
         \caption{Stuck} 
         \label{fig:transfer-mnist-stuck}
     \end{subfigure}
@@ -651,7 +651,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{transfer/cifar-pixel-stuck.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/cifar-pixel-stuck.pdf}
         \caption{Stuck} 
         \label{fig:transfer-cifar-stuck}
     \end{subfigure}
@@ -660,14 +660,14 @@ Our analysis explores various training techniques to improve the accuracy over a
 
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{transfer/mnist-pixel-hot.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/mnist-pixel-hot.pdf}
         \caption{Hot} 
         \label{fig:transfer-mnist-hot}
     \end{subfigure}
     \quad
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{transfer/cifar-pixel-hot.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/cifar-pixel-hot.pdf}
         \caption{Hot} 
         \label{fig:transfer-cifar-hot}
     \end{subfigure}
@@ -676,19 +676,19 @@ Our analysis explores various training techniques to improve the accuracy over a
     
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{transfer/mnist-pixel-dead.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/mnist-pixel-dead.pdf}
         \caption{Dead} 
         \label{fig:transfer-mnist-dead}
     \end{subfigure}
     \quad
     \begin{subfigure}[h]{0.30\textwidth}   
         \centering 
-        \includegraphics[width=\textwidth]{transfer/cifar-pixel-dead.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/cifar-pixel-dead.pdf}
         \caption{Dead} 
         \label{fig:transfer-cifar-dead}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Transfer learning models trained on pixel variations for each pixel category. Results show tests on 2 px changes sampled 25 times for the MNIST and CIFAR-10 datasets.} 
+    \caption{Transfer learning models trained on pixel variations for each pixel category. Results show tests on 2 px changes sampled 25 times for the MNIST and CIFAR-10 datasets. Test accuracy is shown as a function of the change in training pixels.} 
     \label{fig:transfer-pixel}
 \end{figure}
 
@@ -697,7 +697,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{transfer/mnist-noise-noise.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/mnist-noise-noise.pdf}
         \caption{} 
         \label{fig:transfer-mnist-noise}
     \end{subfigure}
@@ -705,12 +705,12 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{transfer/cifar-noise-noise.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/cifar-noise-noise.pdf}
         \caption{} 
         \label{fig:transfer-cifar-noise}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Transfer learning models trained on variations of noise sampled from a normal distribution. Results show tests on various noise levels for the MNIST and CIFAR-10 datasets.} 
+    \caption{Transfer learning models trained on variations of noise sampled from a normal distribution. Results show tests on various noise levels for the MNIST and CIFAR-10 datasets. Test accuracy is shown as a function of the variance in noise.} 
     \label{fig:transfer-noise}
 \end{figure}
 
@@ -719,7 +719,7 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}
         \centering
         \textbf{MNIST}\par\medskip
-        \includegraphics[width=\textwidth]{transfer/mnist-blur-blur.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/mnist-blur-blur.pdf}
         \caption{} 
         \label{fig:transfer-mnist-blur}
     \end{subfigure}
@@ -727,12 +727,12 @@ Our analysis explores various training techniques to improve the accuracy over a
     \begin{subfigure}[h]{0.30\textwidth}  
         \centering 
         \textbf{CIFAR-10}\par\medskip
-        \includegraphics[width=\textwidth]{transfer/cifar-blur-blur.pdf}
+        \includegraphics[width=\textwidth]{training/transfer/cifar-blur-blur.pdf}
         \caption{} 
         \label{fig:transfer-cifar-blur}
     \end{subfigure}
     \captionsetup{width=0.80\linewidth}
-    \caption{Impact of blurry input images on MNIST and CIFAR-10 models fine-tuned with transfer learning.} 
+    \caption{Impact of blurry input images on MNIST and CIFAR-10 models fine-tuned with transfer learning. Test accuracy is shown as a function of the variance in blur.} 
     \label{fig:transfer-blur}
 \end{figure}
 
